--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
 }
 
 .attribution {
-  font-size: 12px;
+  font-size: 0.8125rem;
   text-align: center;
-  height: 40px;
+  height: 2.5rem;
   color: white;
   background-color: #0f0f0f;
   display: -webkit-box;
@@ -27,4 +27,181 @@
 
 .attribution a {
   color: #c5cbe2;
+}
+
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  min-height: 30.25rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #ecf2f8;
+}
+
+.card {
+  width: 45.75rem;
+  height: 17.75rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 17.75rem 1fr;
+      grid-template-columns: 17.75rem 1fr;
+  border-radius: 12px;
+  background-color: white;
+}
+
+.card .thumbnail {
+  width: 17.75rem;
+  height: 17.75rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: left top;
+     object-position: left top;
+  border-radius: 12px 0px 0px 12px;
+}
+
+.card .content {
+  padding: 2.25rem 2.5rem 0 2.25rem;
+}
+
+.card h1 {
+  color: #48556a;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.35;
+}
+
+.card p {
+  color: #6d7f97;
+  font-size: 0.8125rem;
+  line-height: 1.5;
+  font-weight: 500;
+  margin-top: 0.9375rem;
+}
+
+.card .author-and-share {
+  width: 100%;
+  height: 2.5rem;
+  margin-top: 1.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.card .author {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.875rem;
+}
+
+.card .author .avatar {
+  width: 2.5rem;
+  height: auto;
+  border-radius: 50%;
+}
+
+.card .author .name {
+  font-size: 0.8125rem;
+  color: #48556a;
+  font-weight: 700;
+}
+
+.card .author .date {
+  font-size: 0.8125rem;
+  font-weight: 500;
+  color: #6d7f97;
+}
+
+.card .share {
+  position: relative;
+}
+
+.card .share .share-button {
+  border: none;
+  width: 2.125rem;
+  height: 2.125rem;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.card .share .share-button.active {
+  background-color: #6E8098;
+}
+
+.card .share .share-button.active path {
+  fill: white;
+}
+
+.card .share .pop-over-modal {
+  display: none;
+}
+
+.card .share .pop-over-modal.active {
+  display: block;
+  position: absolute;
+  width: 15.5rem;
+  height: 3.5rem;
+  bottom: 3.875rem;
+  left: -6.6875rem;
+}
+
+.card .share .pop-over-modal.active .pop-over-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+  z-index: 1;
+}
+
+.card .share .pop-over-modal.active .pop-over {
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background-color: #48556a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.875rem;
+  position: relative;
+  z-index: 2;
+}
+
+.card .share .pop-over-modal.active .pop-over .text {
+  text-transform: uppercase;
+  color: #9eafc2;
+  font-weight: 500;
+  font-size: 0.8125rem;
+  letter-spacing: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.card .share .pop-over-modal.active .pop-over .triangle {
+  position: absolute;
+  background-color: #48556a;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  width: 1.0625rem;
+  height: 1.0625rem;
+  bottom: -0.53125rem;
 }
